<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:alpha="1"
        android:focusable="true"
        android:focusableInTouchMode="true"
        tools:context="com.freelancing.ahmed.fondooy.LoginActivity"
        android:background="@drawable/pic8">

            <TextView
                android:id="@+id/login_title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="22dp"
                android:gravity="center_horizontal"
                android:text=""
                android:textColor="#fff"
                android:textSize="26sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="fill_parent"
                android:id="@+id/rltvlogin"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="54dp"
                android:elevation="4dp"
                android:background="#fff"
                android:orientation="vertical"
                android:padding="20dp"
                android:alpha="0.9"
                android:layout_alignTop="@+id/user_profile_photo"
                android:layout_centerHorizontal="true">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="30dp">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:theme="@style/AppTheme2">

                        <android.support.design.widget.TextInputEditText
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/at3"
                            android:drawableTint="@color/black"
                            android:hint="@string/email"
                            android:textColorHint="#d67601"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:textSize="19sp"

                            android:id="@+id/etemail"/>

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:theme="@style/AppTheme2">

                        <android.support.design.widget.TextInputEditText
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:drawableTint="@color/black"
                            android:drawableStart="@drawable/lock3"
                            android:hint="@string/passwords"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:id="@+id/etpass"
                            android:textSize="19sp"
                            android:textStyle="bold"
                            />
                    </android.support.design.widget.TextInputLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:paddingTop="5dp"
                        android:text="@string/forgot_password"
                        android:textSize="12sp"
                        android:id="@+id/forgetpassword"
                        />
                    <Button
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="22dp"
                        android:background="#d67601"
                        android:text="@string/sign_in"
                        android:textAllCaps="false"
                        android:textColor="#fff"
                        android:textSize="18sp"
                        android:id="@+id/loginbtn"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:layout_marginTop="-10dp"
                        android:textSize="12sp"
                        android:text="@string/register"

                        android:id="@+id/registerbtn"/>


                </LinearLayout>

            </RelativeLayout>
    <ImageButton
        android:id="@+id/user_profile_photo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@+id/login_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:background="@drawable/user_profile_image_background"
        android:elevation="4dp"
        android:src="@drawable/boy"
        android:contentDescription=""
        tools:ignore="ContentDescription"
        android:alpha="1"/>
    </RelativeLayout>
