<?xml version="1.0" encoding="utf-8"?>
    <ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fillViewport="true"
    android:background="@drawable/pic8"
    tools:context="com.freelancing.ahmed.fondooy.RegisterActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true"
        tools:context="com.freelancing.ahmed.myhotel.RegisterActivity">

        <TextView
            android:id="@+id/login_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="22dp"
            android:gravity="center_horizontal"

            android:textColor="#fff"
            android:textSize="26sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_title"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="70dp"
            android:background="#fff"
            android:elevation="4dp"
            android:orientation="vertical"
            android:padding="20dp"
            android:alpha="0.9">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="30dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/AppTheme2">

                    <EditText
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/avatar"
                        android:drawableTint="@color/black"
                        android:hint="@string/name"
                        android:inputType="text"
                        android:maxLines="1"
                        android:textSize="15sp"
                        android:id="@+id/name"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/AppTheme2">

                    <EditText
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:drawableStart="@drawable/avatar"
                        android:drawableTint="@color/black"
                        android:hint="@string/username"
                        android:inputType="text"
                        android:maxLines="1"
                        android:textSize="15sp"
                        android:id="@+id/username"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/AppTheme2">

                    <EditText
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:drawableStart="@drawable/lock"
                        android:drawableTint="@color/black"
                        android:hint="@string/passwords"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:textSize="15sp"
                        android:id="@+id/password"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/AppTheme2">

                    <EditText
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:drawableStart="@drawable/lock"
                        android:drawableTint="@color/black"
                        android:hint="@string/confpasswords"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:textSize="15sp"
                        android:id="@+id/confpassword"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/AppTheme2">

                    <EditText
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:drawableStart="@drawable/at3"
                        android:drawableTint="@color/black"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:textSize="15sp"
                        android:id="@+id/email"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/AppTheme2">

                    <EditText
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:drawableStart="@drawable/phone1"
                        android:drawableTint="@color/black"
                        android:hint="@string/phone"
                        android:inputType="phone"
                        android:maxLines="1"
                        android:textSize="15sp"
                        android:id="@+id/phone"/>
                </android.support.design.widget.TextInputLayout>


                <fr.ganfra.materialspinner.MaterialSpinner
                    android:id="@+id/spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/AppTheme"
                    android:drawableTint="#d67601"
                    app:ms_arrowColor="@color/black"
                    app:ms_arrowSize="16dp"
                    app:ms_floatingLabelColor="@color/black"
                    app:ms_floatingLabelText="Select Country"
                    app:ms_hint="Select Your Country"
                    app:ms_multiline="true"
                    app:ms_hintColor="@color/black"

                    />
                    <fr.ganfra.materialspinner.MaterialSpinner
                        android:id="@+id/spinner2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:theme="@style/AppTheme"
                        android:drawableTint="#d67601"
                        app:ms_arrowColor="@color/black"
                        app:ms_arrowSize="16dp"
                        app:ms_floatingLabelColor="@color/black"
                        app:ms_floatingLabelText="Select Company"
                        app:ms_hint="Please Select"
                        app:ms_multiline="true"
                        app:ms_hintColor="@color/black"

                        />

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="22dp"
                    android:background="#d67601"
                    android:text="Register"
                    android:textAllCaps="false"
                    android:textColor="#fff"
                    android:textSize="18sp"

                    android:id="@+id/regbtn"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:layout_marginTop="-10dp"
                    android:textSize="12sp"
                    android:text="@string/already_have_an_account_sign_in"

                    android:id="@+id/logbtn"/>
            </LinearLayout>
        </RelativeLayout>

        <ImageButton
            android:id="@+id/user_profile_photo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_below="@+id/login_title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:background="@drawable/user_profile_image_background"
            android:elevation="4dp"
            android:src="@drawable/boy"
            android:contentDescription=""
            tools:ignore="ContentDescription"
            android:alpha="1"/>


    </RelativeLayout>
    </ScrollView>